--- a/teste_monitoramento_SO/monitor_app/pubspec.yaml
+++ b/teste_monitoramento_SO/monitor_app/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^0.8.7+3
+  google_generative_ai: ^0.4.6
+  permission_handler: ^10.2.0
+  path: ^1.9.0
 
 
 dev_dependencies:
